2. Tabular data and classification/da.ipynb, en.ipynb

--- a/2. Tabular data and classification/da.ipynb
+++ b/2. Tabular data and classification/da.ipynb
@@ -24,9 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data frames\n",
-    "\n",
-    "## Data frames"
+    "## Data frames (Dataramme)"
    ]
   },
   {
@@ -35,7 +33,7 @@
    "source": [
     "I Python repræsenteres tabulære datasæt som *data frames*. En data frame ligner meget en Excel-tabel. Den består af en eller flere kolonner, hvor hver kolonne indeholder en specifik type information, typisk enten et tal eller en tekst.\n",
     "\n",
-    "Hvis du ønsker at arbejde med data frames, skal du bruge et specielt bibliotek, [Pandas](https://pandas.pydata.org). Lad os først installere det. Kør koden nedenfor og tilføj derefter `#` foran koden for at undgå at køre den igen."
+    "Hvis du vil arbejde med data frames, skal du bruge et specielt bibliotek, [Pandas](https://pandas.pydata.org). Lad os først installere det. Kør koden nedenfor og tilføj derefter `#` foran koden for at undgå at køre den igen."
    ]
   },
   {
@@ -51,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nu skal vi oprette en datasæt med egenskaber for fire personer. Vi opretter værdier for hver egenskab som en liste (de vil danne kolonnerne i det kommende datasæt)."
+    "Nu skal vi oprette en data frame med egenskaber for fire personer. Vi opretter værdier for hver egenskab som en liste (de vil danne kolonnerne i det kommende data frame)."
    ]
   },
   {
@@ -94,7 +92,7 @@
    "source": [
     "Som du kan se, anvendte vi også en specifik datastruktur til at kombinere kolonnerne sammen - en *dictionary*, som ser således ud: `{\"Navn1\": værdier, \"Navn2\": værdier2}`. Dette er en måde i Python at kombinere forskellige elementer, så hvert element har et navn (en nøgle, en ID).\n",
     "\n",
-    "Data frames kan også gemmes i filer (eller indlæses fra filer). Den mest passende format til data frames er Coma Separated Values (CSV) filer. De er bare plain tekst filer, hvor værdierne i hver række er adskilt med kommaer. Pandas kan også arbejde med Excel filer efter behov.\n",
+    "Data frames kan også gemmes i filer (eller indlæses fra filer). Den mest passende format til data frames er Comma Separated Values (CSV) filer. De er bare plain tekst filer, hvor værdierne i hver række er adskilt med kommaer. Pandas kan også arbejde med Excel filer efter behov.\n",
     "\n",
     "Lad os gemme vores data frame i en sådan fil:"
    ]
@@ -168,7 +166,7 @@
     "### Øvelse 1\n",
     "\n",
     "Brug internettet til at indsamle følgende information om alle EU-lande, inklusive:\n",
-    "* Navnet på landet\n",
+    "* Landets navn\n",
     "* Befolkning\n",
     "* Areal (i kvadratmeter)\n",
     "* År de blev en del af EU\n",
@@ -203,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ordet \"petal\" henviser til den indre, og \"sepal\" henviser til den ydre del af blomsten. Både sepal- og petallængder samt bredde måles i centimeter.\n",
+    "Udtrykket \"petal\" refererer til den indre del, og \"sepal\" refererer til den ydre del af blomsten. Både sepal- og petallængder samt bredde måles i centimeter.\n",
     "\n",
     "<img src=\"illustrations/Petal-Sepal-Length-Width.jpg\" style=\"width:300px; height:300px;\"/>\n",
     "\n",
@@ -224,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Som du kan se, indeholder datasættet 150 rækker - en for hver enkelt blomst. Kolonnerne inkluderer ID'et (et unikt nummer for hver blomst startende fra 1), de fire målinger og artens navn. Det betyder, at der er én kolonne med heltal, fire kolonner til tal med decimaler og én kolonne med tekstetiketter."
+    "Som du kan se, indeholder datasættet 150 rækker - en for hver enkelt blomst. Kolonnerne inkluderer ID'et (et unikt nummer for hver blomst startende fra 1), de fire målinger og artens navn. Det betyder, at der er én kolonne med heltal, fire kolonner med decimaltal og én kolonne med tekstetiketter."
    ]
   },
   {
@@ -359,7 +357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternativt kan du også bruge `.iloc` men angive to positioner, rækker og kolonnens indeks, ligesom du gjorde det med 2D NumPy arrays. Hvis du ikke ønsker at udvælge rækker og kun udvælge kolonner, skal du blot bruge `:` symbolet for rækkerne. For eksempel i kodeeksemplet nedenfor tager vi kun kolonner med målinger og viser derefter de første 5 rækker af undersættelsen:"
+    "Alternativt kan du også bruge `.iloc` men angive to positioner, rækker og kolonnens indeks, ligesom du gjorde det med 2D NumPy arrays. Hvis du ikke vil at udvælge rækker og kun udvælge kolonner, skal du blot bruge `:` symbolet for rækkerne. For eksempel i kodeeksemplet nedenfor tager vi kun kolonner med målinger og viser derefter de første 5 rækker af undersættelsen:"
    ]
   },
   {
@@ -377,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Opretter subsets ved brug af logiske udtryk\n",
+    "### Oprettelse af delmængder ved brug af logiske udtryk\n",
     "\n",
     "En anden måde at lave rækkesubsets er at bruge logiske udtryk. For eksempel, sådan får du kun rækker, der svarer til *Setosa* arten:"
    ]
@@ -405,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vær opmærksom på, at når vi sammenligner en kolonneværdi med `\"setosa\"`, bruger vi et dobbelt symbol `==`. Dette er den måde at fortælle Python, at du laver sammenligningen, og ikke ønsker at ændre eller tildele en værdi (som vi bruger et enkelt `=` for).\n",
+    "Vær opmærksom på, at når vi sammenligner en kolonneværdi med `\"setosa\"`, bruger vi et dobbelt symbol `=`, `==`. Dette er den måde at fortælle Python, at du laver sammenligningen, og ikke vil at ændre eller tildele en værdi (som vi bruger et enkelt `=` for).\n",
     "\n",
     "Og her er et eksempel, hvor vi opretter en delmængde med kun Setosa blomster, hvis *PetalWidth* er over 0.2:"
    ]
@@ -639,7 +637,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ser rigtig godt ud, men det vigtigste er, at det viser os, at blomstermålinger (sidste to grafer) kan bruges til at adskille blomster af forskellige arter. De har tydeligvis forskellig blomsterstørrelse. Vi vil bruge denne viden senere til at opbygge en klassificeringsmodel.\n",
+    "Ser rigtig godt ud, men det vigtigste er, at det viser os, at Petal målinger (de sidste to grafer) kan bruges til at adskille blomster af forskellige arter. De har tydeligvis forskellige Petal størrelser. Vi vil bruge denne viden senere til at opbygge en klassificeringsmodel.\n",
     "\n",
     "I mellemtiden lad os lære, hvordan man laver et andet plot — et spredningsplot. Lad os starte med et simpelt eksempel for at give en idé:"
    ]
@@ -675,12 +673,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make a plot figure of size 10 x 10\n",
+    "# make a plot figure of size 6 x 6\n",
     "plt.figure(figsize = (6, 6))\n",
     "\n",
     "# show scatter plot which takes values from two columns, Petal Width and Petal Length\n",
     "# and then every row is shown as a point. The x-coordinate of the point corresponds to its\n",
-    "# Petal Width value and the y-coordinate to the value of Petal Length.\n",
+    "# Petal Width value and the y-coordinate corresponds to the value of Petal Length.\n",
     "plt.scatter(se[\"PetalWidth\"], se[\"PetalLength\"], color=\"red\", label=\"setosa\")\n",
     "plt.scatter(ve[\"PetalWidth\"], ve[\"PetalLength\"], color=\"green\", label=\"versicolor\")\n",
     "plt.scatter(vi[\"PetalWidth\"], vi[\"PetalLength\"], color=\"blue\", label=\"virginica\")\n",
@@ -700,7 +698,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Som du kan se, er koden meget ens med koden, vi brugte til at lave et søjlediagram. Og dette betyder, at vi kan forenkle det og lave en funktion:"
+    "Som du kan se, er koden meget lig den kode, vi brugte til at lave et søjlediagram. Og dette betyder, at vi kan forenkle det og lave en funktion:"
    ]
   },
   {
@@ -813,9 +811,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lav et spredningsplot, der viser landenes areal på x-aksen og befolkning på y-aksen. Ser du nogen tendens? Hvorfor?\n",
-    "\n",
-    "Jeg kan ikke se noget plot, da jeg er en tekstbaseret assistent. Men hvis du laver et spredningsplot med landes areal på x-aksen og befolkning på y-aksen, kan du se om der er en tendens. En mulig trend kunne være, at større lande ofte har en større befolkning, men dette afhænger af data og eventuelle outliers."
+    "Lav et spredningsplot, der viser landenes areal på x-aksen og befolkning på y-aksen. Ser du nogen tendens? Hvorfor?"
    ]
   },
   {
@@ -897,7 +893,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Men når x er lig med 5, 10, 15 eller 55, vil resten være lig med 0. Og dette er præcis hvad vi bruger til at skabe vores indeks. Fordi kolonnen 'Id' indeholder et unikt antal rækker, der starter fra 1, kan vi beregne resten for hvert værdi af denne kolonne og sammenligne den med 0. Alle rækker, hvor denne betingelse er sand, vil blive taget til testsættet. Alle rækker, hvor denne betingelse er falsk, vil blive taget til træningssættet.\n",
+    "Men når x er lig med 5, 10, 15 eller 55, vil resten være lig med 0. Og dette er præcis hvad vi bruger til at skabe vores indeks. Fordi kolonnen `Id` indeholder et unikt antal rækker, der starter fra 1, kan vi beregne resten for hvert værdi af denne kolonne og sammenligne den med 0. Alle rækker, hvor denne betingelse er sand, vil blive taget til testsættet. Alle rækker, hvor denne betingelse er falsk, vil blive taget til træningssættet.\n",
     "\n",
     "Lad os oprette sættene:"
    ]
@@ -977,7 +973,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Det ser ud til, at den bedste måde at *skelne* *Virginica* blomsterne fra de to andre arter er at definere en grænse for Blomsterbladets Bredde - Hvis værdien er over 1.7, skal den tilsvarende blomst klassificeres som medlem af klassen *virginica*.\n",
+    "Det ser ud til, at den bedste måde at *skelne* *Virginica* blomsterne fra de to andre arter er at definere en grænse for Petal Bredde - Hvis værdien er over 1.7, skal den tilsvarende blomst klassificeres som medlem af klassen *virginica*.\n",
     "\n",
     "Her er søjlediagrammet med beslutningsgrænsen vist som en vandret stiplet linje:"
    ]
@@ -1101,7 +1097,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Som du kan se, på den ene side, afviser modellen alle ikke-medlemmer i testsettet - de 10 blomster af *Setosa*-art og 10 blomster af *Versicolor*-art blev korrekt afvist som ikke-medlemmer (fik 'Falsk' som klassifikationssvar).\n",
+    "Som du kan se, på den ene side, afviser modellen alle ikke-medlemmer i testsettet - de 10 blomster af *Setosa*-art og 10 blomster af *Versicolor*-art blev korrekt afvist som ikke-medlemmer (fik `Falsk` som klassifikationssvar).\n",
     "\n",
     "Men samtidig blev tre blomster fra målarten afvist forkert. Er dette et godt resultat? Skal vi ændre tærsklen lidt? Hvordan vurderes kvaliteten af klassifikationen og forbedres den? Lad os tale om dette i næste del."
    ]
@@ -1190,7 +1186,7 @@
    "source": [
     "Igen, det matcher vores observationer med 70% korrekt genkendte medlemmer (7 ud af 10) og 100% korrekt afviste fremmede.\n",
     "\n",
-    "Endelig kan vi også beregne en tredje statistik, *præcision*, som vil fortælle, hvor godt modellen fungerer generelt. Den beregner simpelthen procentdelen af alle korrekte svar:\n",
+    "Endelig kan vi også beregne en tredje statistik, *nøjagtighed*, som vil fortælle, hvor godt modellen fungerer generelt. Den beregner simpelthen procentdelen af alle korrekte svar:\n",
     "\n",
     "Præcision = (TP + TN) / (TP + TN + FP + FN)\n",
     "\n",
@@ -1211,7 +1207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hvis antallet af fremmede og medlemmer i testsættet er ens, vil nøjagtigheden være lig en gennemsnitlig af følsomhed og specificitet som i vores tilfælde.\n",
+    "Hvis antallet af fremmede og medlemmer i testsættet er ens, vil nøjagtigheden være lig en gennemsnitlig af sensitivitet og specificitet.\n",
     "\n",
     "### Øvelse\n",
     "\n",
@@ -1219,7 +1215,7 @@
     "\n",
     "<img src=\"illustrations/apples-classification.png\" style=\"width: 700px;\">\n",
     "\n",
-    "Beregn antallet af TP, TN, FP, FN og brug disse tal til at beregne følsomhed, specificitet og nøjagtighed af klassificeringsresultaterne. Gør det manuelt uden brug af programmering og rapporter resultaterne.\n",
+    "Beregn antallet af TP, TN, FP, FN og brug disse tal til at beregne sensitivitet, specificitet og nøjagtighed af klassificeringsresultaterne. Gør det manuelt uden brug af programmering og rapporter resultaterne.\n",
     "\n",
     "### Kvalitet af klassificering (fortsæt)\n",
     "\n",
@@ -1326,7 +1322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Receiver operating characteristic\n",
+    "### Receiver operating characteristic (ROC)\n",
     "\n",
     "Endelig lad os gøre følgende. Lad os prøve at ændre tærsklen og se, hvordan det påvirker sensitiviteten, specificiteten og nøjagtigheden. Lad os starte med 1,0 og derefter prøve alle tærskelværdier op til 2,0 med et trin på 0,1, så vi får i alt 11 resultater:"
    ]
@@ -1398,9 +1394,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nu kan du træffe en informeret beslutning. For eksempel giver en tærskel på 1,4 alle tre statistikker, der er lig med 0,90. En mindre tærskel på 1,3 giver perfekt følsomhed, men reducerer specificiteten til 0,85. Den større tærskel, på 1,5, giver perfekt specificitet, men reducerer følsomheden til 0,80.\n",
+    "Nu kan du træffe en informeret beslutning. For eksempel giver en tærskelværdi på 1,4 alle tre statistikker lig med 0,90. En lavere tærskelværdi på 1,3 giver perfekt sensitivitet, men reducerer specificiteten til 0,85. Den højere tærskelværdi på 1,5 giver perfekt specificitet, men reducerer sensitiviteten til 0,80.\n",
     "\n",
-    "Der er også en anden måde at vise disse resultater på — lav et linjediagram, hvor følsomheden afhænger af (1 - specificitet):"
+    "Der er også en anden måde at vise disse resultater på — lav et linjediagram, hvor sensitiviteten afhænger af (1 - specificitet):"
    ]
   },
   {
@@ -1435,9 +1431,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Flersklasse klassificering\n",
+    "### Multiklasseklassifikation\n",
     "\n",
-    "Nu skal vi lave en klassifikationsmodel, som vil give en af klassens etiketter som svar, så den vil skelne mellem alle blomster blandt de tre arter. Denne tilgang er kendt som *flersklasse klassificering*.\n",
+    "Nu skal vi lave en klassifikationsmodel, som vil give en af klassens etiketter som svar, så den vil skelne mellem alle blomster blandt de tre arter. Denne tilgang er kendt som *multiklasseklassifikation*.\n",
     "\n",
     "Først og fremmest lad os se på de to spredningsdiagrammer nedenfor:"
    ]
@@ -1460,7 +1456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tilsyneladende kan vi bruge blomstblade målinger til diskriminering. Setosa kan tydeligt skelnes ved at bruge en tærskel langs Blomsterblad længde, ved f.eks. en tærskel på 2.5. Vi har allerede en løsning for virginica (vi vil bruge den samme tærskel på 1.7). Og hvis ingen af de to betingelser er opfyldt, vil blomsten blive genkendt som versicolor.\n",
+    "Tilsyneladende kan vi bruge Petal målinger til at skelne mellem arterne. Setosa kan tydeligt skelnes ved at bruge en tærskelværdi for Petal længde, ved f.eks. en tærskelværdi på 2,5. Vi har allerede en løsning for virginica (vi vil bruge den samme tærskelværdi på 1,7). Og hvis ingen af de to betingelser er opfyldt, vil blomsten blive genkendt som versicolor.\n",
     "\n",
     "Sådan kan det skematisk vises som et følgende flowchart:\n",
     "\n",
@@ -1490,7 +1486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Og lad os nu lave en funktion, der anvender denne klassificering på alle rækker."
+    "Og lad os nu lave en funktion, som vil anvender denne klassifikator på alle rækker."
    ]
   },
   {
@@ -1529,7 +1525,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Og det virker! Nu skal vi bare beregne kvalitetsstatistikkerne for klassificeringen for hver af klasserne:"
+    "Og det virker! Nu skal vi bare beregne klassifikationskvalitetsstatistikkerne for hver af klasserne:"
    ]
   },
   {
@@ -1552,7 +1548,7 @@
     "\n",
     "### Øvelse\n",
     "\n",
-    "Implementer beslutningstræet, som vil bruge tre betingelser i stedet for to. Lav først en tegning og implementer det derefter i Python og test det. Diskuter fordele og ulemper ved denne løsning."
+    "Implementer beslutningstræet (Decision Tree), som vil bruge tre betingelser i stedet for to. Lav først en tegning og implementer det derefter i Python og test det. Diskuter fordele og ulemper ved denne løsning."
    ]
   }
  ],
@@ -1572,7 +1568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
