--- a/2. Tabular data and classification/en.ipynb
+++ b/2. Tabular data and classification/en.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "1. How to create such datasets and load them from files.\n",
     "2. How to analyze and visualize such datasets.\n",
-    "3. How to make make a model which will assign the individuals into groups — classify them.\n",
+    "3. How to make a model which will assign the individuals into groups — classify them.\n",
     "4. How to assess the results of such classification.\n",
     "\n",
     "As usually, let's start from the basics."
@@ -32,7 +32,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "In Python, tabular datasets are represented as *data frames*. Data frame is very similar to an Excel table. In consists of one or several columns, every column contains one specific type of information, most of the time it is either a number or a text. \n",
+    "In Python, tabular datasets are represented as *data frames*. Data frame is very similar to an Excel table. It consists of one or several columns, every column contains one specific type of information, most of the time it is either a number or a text. \n",
     "\n",
     "If you want to work with data frames you need to use a special library, [Pandas](https://pandas.pydata.org). Let's install it first. Run the code below and then add `#` in front of the code to avoid running it afterwards."
    ]
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's create a data frame with characteristics of four people. We create values for each characteristic as a list (they will form columns of the future data frame)."
+    "Now let's create a data frame with the characteristics of four people. We create values for each characteristic as a list (they will form columns of the future data frame)."
    ]
   },
   {
@@ -93,7 +93,7 @@
    "source": [
     "As you can see, we also used a specific data structure to combine the columns together — a *dictionary*, which looks as follows: `{\"Name1\": values, \"Name2\", values2}`. This is a way in Python to combine different elements together so every element has a name (a key, an ID).\n",
     "\n",
-    "Data frames can be also saved to files (or loaded from files). The best suitable format for data frames is Coma Separated Values (CSV) files. They are just plain text files where values in every row are separated with comas. Pandas can also work with Excel files if needed.\n",
+    "Data frames can be also saved to files (or loaded from files). The best suitable format for data frames is Comma Separated Values (CSV) files. They are just plain text files where values in every row are separated with commas. Pandas can also work with Excel files if needed.\n",
     "\n",
     "Let's save our data frame to such a file:"
    ]
@@ -171,9 +171,9 @@
     "* Population\n",
     "* Area (in square meters)\n",
     "* Year they became a part of EU\n",
-    "* Do they use Euro (just \"yes\" or \"not\")\n",
+    "* Do they use Euro (just \"yes\" or \"no\")\n",
     "\n",
-    "Enter this information to Excel or other spreadsheet table software and save the table as a CSV file (coma separated). Then load dat from the CSV file to Python and show it on the screen.  "
+    "Enter this information to Excel or other spreadsheet table software and save the table as a CSV file (comma separated). Then load data from the CSV file to Python and show it on the screen.  "
    ]
   },
   {
@@ -223,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, the dataset contains 150 rows — one for each individual flower. The columns include the ID (a unique number of each flower staring from 1), the four measurements, and the name of the species. Which means that there is one column with integer (whole) numbers, four columns for floating point numbers and one column with text labels."
+    "As you can see, the dataset contains 150 rows — one for each individual flower. The columns include the ID (a unique number of each flower staring from 1), the four measurements, and the name of the species. Which means that there is one column with integer (whole) numbers, four columns with floating point numbers and one column with text labels."
    ]
   },
   {
@@ -638,7 +638,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looks very good, but, what is most important, it shows us that Petal measurements (last two plots) can be used to separate flowers of different species. They clearly have different petal size. We will use this knowledge later to build a classification model. \n",
+    "Looks very good, but, what is most important, it shows us that Petal measurements (the last two plots) can be used to separate flowers of different species. They clearly have different petal sizes. We will use this knowledge later to build a classification model. \n",
     "\n",
     "Meanwhile let's learn how to make another plot — scatter plot. Let's start with a simple example to give an idea:"
    ]
@@ -674,12 +674,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make a plot figure of size 10 x 10\n",
+    "# make a plot figure of size 6 x 6\n",
     "plt.figure(figsize = (6, 6))\n",
     "\n",
     "# show scatter plot which takes values from two columns, Petal Width and Petal Length\n",
     "# and then every row is shown as a point. The x-coordinate of the point corresponds to its\n",
-    "# Petal Width value and the y-coordinate to the value of Petal Length.\n",
+    "# Petal Width value and the y-coordinate corresponds to the value of Petal Length.\n",
     "plt.scatter(se[\"PetalWidth\"], se[\"PetalLength\"], color=\"red\", label=\"setosa\")\n",
     "plt.scatter(ve[\"PetalWidth\"], ve[\"PetalLength\"], color=\"green\", label=\"versicolor\")\n",
     "plt.scatter(vi[\"PetalWidth\"], vi[\"PetalLength\"], color=\"blue\", label=\"virginica\")\n",
@@ -797,7 +797,7 @@
     "\n",
     "### Exercise 3\n",
     "\n",
-    "Write a code that shows a bar plot four area of each EU country. Show the countries, which became a part of EU before 2000, using blue color, and the countries, which became a part of EU in 2000 or later, using green color."
+    "Write a code that shows a bar plot for area of each EU country. Show the countries, which became a part of EU before 2000, using blue color, and the countries, which became a part of EU in 2000 or later, using green color."
    ]
   },
   {
@@ -1115,9 +1115,9 @@
    "source": [
     "### Classification quality\n",
     "\n",
-    "In order to assess the classification quality we need to count how many outcomes are correct and how many are wrong. However, there are two different groups of samples the model can be wrong or correct about — the *strangers* (objects which indeed do not belong to the target class) and the *members* (the ones that belong to this class). \n",
+    "In order to assess the classification quality we need to count how many outcomes are correct and how many are wrong. However, there are two different groups of samples that model can be wrong or correct about — the *strangers* (objects which indeed do not belong to the target class) and the *members* (the ones that belong to this class). \n",
     "\n",
-    "So we need to count the outcomes separately. This leads us two four numbers:\n",
+    "So we need to count the outcomes separately. This leads us to four numbers:\n",
     "\n",
     "**Correct answers**\n",
     "* TP (*true positives*) — number of members correctly accepted by the mode (got `True`).\n",
@@ -1214,7 +1214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the number of strangers and members in test set are equal, then the accuracy will be just an average of sensitivity and specificity like in our case.\n",
+    "If the number of strangers and members in test set are equal, then the accuracy will be just an average of sensitivity and specificity.\n",
     "\n",
     "### Exercise\n",
     "\n",
@@ -1329,7 +1329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Receiver operating characteristic\n",
+    "### Receiver operating characteristic (ROC)\n",
     "\n",
     "Finally let's do the following. Let's try to change the threshold and see how it influences the sensitivity, specificity and accuracy. Let's start with 1.0 and then try all threshold values up to 2.0 with a step of 0.1 so we will have 11 results in total: "
    ]
@@ -1401,9 +1401,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you can make an educated decision. For example threshold at 1.4 gives all three statistics equal to 0.90. A smaller threshold, 1.3, gives perfect sensitivity but increases the specificity down to 0.85. The larger threshold, et 1.5, gives perfect specificity but decreases the sensitivity down to 0.80.\n",
+    "Now you can make an educated decision. For example, a threshold of 1.4 gives all three statistics equal to 0.90. A smaller threshold, 1.3, gives perfect sensitivity but decreases the specificity down to 0.85. The larger threshold, at 1.5, gives perfect specificity but decreases the sensitivity down to 0.80.\n",
     "\n",
-    "There is also another way to show these results — make a line plot where sensitivity depends (1 - specificity):"
+    "There is also another way to show these results — make a line plot where sensitivity depends on (1 - specificity):"
    ]
   },
   {
@@ -1463,7 +1463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apparently we can use the petal measurements for discrimination. Setosa can be clearly discriminated by using threshold along Petal Length, using for example a threshold of 2.5. We already have a solution for *virginica* (we will use the same threshold of 1.7). And then if none of the two conditions are satisfied the flower will be recognized as versicolor.\n",
+    "Apparently, we can use the petal measurements for discrimination. Setosa can be clearly discriminated by using a threshold along Petal Length, for example, a threshold of 2.5. We already have a solution for *virginica* (we will use the same threshold of 1.7). And then, if none of the two conditions are satisfied, the flower will be recognized as versicolor.\n",
     "\n",
     "Schematically it can be shown as a following flowchart:\n",
     "\n",
@@ -1532,7 +1532,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And it works! Now we just need to calculate the classification quality statistics for each of the class:"
+    "And it works! Now we just need to calculate the classification quality statistics for each of the classes:"
    ]
   },
   {
@@ -1555,7 +1555,7 @@
     "\n",
     "### Exercise\n",
     "\n",
-    "Implement decision tree which will use three conditions instead of two. Make a drawing first and then implement it on Python and test. Discuss cons and pros if this solutuion."
+    "Implement decision tree which will use three conditions instead of two. Make a drawing first and then implement it on Python and test. Discuss cons and pros of this solutuion."
    ]
   }
  ],
@@ -1575,7 +1575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
