3.Artificial neural networks/da.ipynb, en.ipynb

--- a/2. Tabular data and classification/en.ipynb
+++ b/2. Tabular data and classification/en.ipynb
@@ -1555,7 +1555,7 @@
     "\n",
     "### Exercise\n",
     "\n",
-    "Implement decision tree which will use three conditions instead of two. Make a drawing first and then implement it on Python and test. Discuss cons and pros of this solutuion."
+    "Implement decision tree which will use three conditions instead of two. Make a drawing first and then implement it on Python and test. Discuss cons and pros of this solution."
    ]
   }
  ],
