added final exercises

--- a/0. Python basics/en.ipynb
+++ b/0. Python basics/en.ipynb
@@ -1899,6 +1899,76 @@
     "Torchinfo is a small package which gives you information about PyTorch models: how many layers they have, how many parameters, etc.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 1**\n",
+    "\n",
+    "Write a function `fibo`, which computes [Fibonacci sequence](https://en.wikipedia.org/wiki/Fibonacci_sequence) and returns it as a list. The function should have one argument, the length of the sequence, `n`. If `n` is negative or not integer the function should show the error message and return `None`. If n is larger than `100` the function should return only first 100 elements of the sequence and give a corresponding message."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 1. Put your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 2**\n",
+    "\n",
+    "Write a function `bmi`, which takes height of a person in cm and weight of a person in kg, computes BMI and returns a tuple with the computed value rounded to one decimal and a category based on the table below. If necessary you can write any additional functions.\n",
+    "\n",
+    "Now imagine that you have two lists, one with height: `[180, 190, 166, 178]` and second one with weight: `[78, 91, 50, 98]` values of four persons. Find the shortest and most efficient way to employ your function to get another list of tuples `(bmi, category)` for the persons. So, for this particular example the result will be as follows:\n",
+    "\n",
+    "```\n",
+    "[(24.1, 'Normal range'),\n",
+    " (25.2, 'Overweight (Pre-obese)'),\n",
+    " (18.1, 'Underweight (Mild thinness)'),\n",
+    " (30.9, 'Obese (Class I)')]\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 2. Put your code here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 3**\n",
+    "\n",
+    "Place all your functions written for Exercise 2 and 3 to the local module, import and test them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 3. Put yor code here."
+   ]
   }
  ],
  "metadata": {
